# GeoPolitic_AI

./: README.md  agents.py  app.py  crew.py  pyproject.toml  requirements.txt  tasks.py
backend/: agents.py  api.py  crew.py  geopolitics_research_crew_result.md  job_manager.py  model.py  tasks.py
frontend/: app.py
