[tool.poetry]
name = "geopolitic-ai"
version = "0.1.0"
description = ""
authors = ["ISLAM HACHIMI <94931434+MR-GREEN1337@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "^0.28.8"
streamlit = "^1.34.0"
langchain-groq = "^0.1.3"
pydantic = "^2.7.1"
crewai-tools = {extras = ["serperdevtool"], version = "^0.2.4"}
pysqlite3-binary = "^0.5.2.post3"
langchain = "^0.1.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
